@@ -135,6 +135,7 @@ static THREAD_ENTRY _GBAThreadRun(void* context) {
 	threadContext->gba = &gba;
 	gba.logLevel = threadContext->logLevel;
 	gba.logHandler = threadContext->logHandler;
+	gba.stream = threadContext->stream;
 	gba.idleOptimization = threadContext->idleOptimization;
 #ifdef USE_PTHREADS
 	pthread_setspecific(_contextKey, threadContext);
