@@ -70,6 +70,7 @@ Misc:
  - Qt: Move frame upload back onto main thread
  - All: Enable link-time optimization
  - GBA Thread: Make GBASyncWaitFrameStart time out
+ - GBA: Move A/V stream interface into core
 
 0.1.1: (2015-01-24)
 Bugfixes:
